fix: table header spacing

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ main {
 }
 
 section {
-  min-width: 860px;
+  min-width: 867px;
   display: flex;
   flex: 1 1 auto;
   flex-flow: column wrap;
@@ -337,6 +337,7 @@ p#lastSeen {
 table {
   width: 100%;
   display: flex;
+  flex-flow: column;
   border-collapse: collapse;
   color: #333333;
   font: normal normal normal 18px/23px "Source Code Pro", monospace;
@@ -351,35 +352,38 @@ table {
   color: white;
   display: flex;
   justify-content: space-evenly;
-  padding: 0px 10px;
+  padding: 0px 0px 0px 15px;
 }
 
-th:nth-of-type(1),
-th:nth-of-type(4) {
-  flex: 1.5;
+th:nth-of-type(1) {
+  flex: 1.8;
 }
 
-th:nth-of-type(2) {
+th:nth-of-type(2),
+th:nth-of-type(3) {
   flex: 1;
-  text-align: right;
 }
 
-.blankCol {
-  flex: 0 1 6%;
-}
-
-th:nth-of-type(5) {
+th:nth-of-type(4) {
   flex: 0.5;
 }
 
 th {
   font-weight: 600;
-  padding: 30px 25px;
+  padding: 30px 0px;
   text-align: left;
 }
 
+.blank_row {
+  height: 10px !important;
+  background-color: #ffffff;
+}
+
+tr {
+}
+
 td {
-  padding: 15px 30px;
+  padding: 15px 15px;
 }
 
 div.user.tableElement {
@@ -391,9 +395,9 @@ div.user.tableElement {
 
 .table.user {
   display: flex;
-  flex-direction: row;
+  flex-direction: row wrap;
   align-items: center;
-  gap: 25px;
+  gap: 20px;
   flex: 1;
 }
 
